# m1-visualiser

./: Cargo.toml
.github/workflows/: ci.yml
docs/plans/: 2026-06-23-overlay-plan.md  2026-06-23-structural-build-plan.md
docs/specs/: 2026-06-23-m1-visualiser-design.md
src/: dataflow.rs  dot.rs  eval.rs  html.rs  json.rs  lib.rs  loader.rs  main.rs  model.rs
templates/: README.md  viewer.html
tests/: cli.rs  smoke.rs
tests/fixtures/: Limiter.m1scr  Project.m1prj  parameters.m1cfg
tests/fixtures/overlay/: Project.m1prj  parameters.m1cfg  run.csv  scenario.toml
tests/fixtures/overlay/Scripts/: Demo.Update.m1scr
