[package]
name = "m1-visualiser"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Interactive structural graph/visualiser for MoTeC M1 projects"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", tag = "v0.12.0" }
m1-typecheck = { git = "https://github.com/C-Nucifora/m1-typecheck.git", tag = "v0.36.0" }
m1-eval = { git = "https://github.com/C-Nucifora/m1-eval.git", tag = "v0.1.0" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = 3
